--- a/template/article/latestArticles.html.twig
+++ b/template/article/latestArticles.html.twig
@@ -3,7 +3,7 @@
 	<div class="article-container">
 		{% for article in articles|slice(0, 3) %}
 			<div class="article-card">
-				<h2>{{ article.title }}</h2>
+				<h2 class="title-home-article"><a href="/articles">{{ article.title }}</a></h2>
 				<p>{{ article.chapo|split(' ')|slice(0, 10)|join(' ') }}
 					{% if article.chapo|split(' ')|length > 10 %}
 						...
@@ -18,9 +18,7 @@
 						{{ article.date|date('d/m/Y') }}
 					{% endif %}
 				</p>
-				<p class="link-to-article">
-					<a href="/article/{{ article.id }}" target="_blank" class="link-article">Lire l'article</a>
-				</p>
+				
 			</div>
 		{% endfor %}
 	</div>
