--- a/template/home/home.html.twig
+++ b/template/home/home.html.twig
@@ -1,7 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block js %}
-	<script src="../js/effect.js"></script>
-{% endblock %}
+
 {% block body %}
 	<div class="profile-container">
 		<div class="text-container">
@@ -17,7 +15,7 @@
 	</div>
 	{% include 'contact/contact.html.twig' %}
 	<h2 class="CV">Pour voir et télécharger mon parcours professionnel
-		<a href="./CV/mon-CV.pdf" target="_blank">cliquez ici</a>
+		<a href="./CV/mon-CV.pdf" target="_blank">cliquez ici!</a>
 	</h2>
 	{% include 'article/latestArticles.html.twig' %}
 {% endblock %}
