--- a/template/home/home.html.twig
+++ b/template/home/home.html.twig
@@ -8,7 +8,7 @@
 			<div class="present-txt">
 				Transformer votre vision numérique en réalité, avec une touche de passion et d'innovation!
 				<br>
-				Ludivine Goldstein, développeuse web engagée."
+				Ludivine Goldstein, développeuse web engagée.
 			</div>
 		</div>
 		<img class="contact-img" src="./img/ludDev.jpg" alt="img-profil">
